Copyright (c) 2002-2006 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

Under development

    Features added

      - Moved document info in the document status screen to an info column 
        like assets have.

      - Refactored/cleaned up tab_status_macros to remove code duplication.

      - Changed the add screens for Files and Images so the upload (file) field
        comes first, followed by a subhead 'optional fields', because Authors
        were not seeing the tip that they don't have to fill in an id.
    
      - Added a more discreet favicon for the public views.

      - For the frontend,css that gets placed in the ZMI, import the 
        frontend.css in globals to stop duplication but still give the end user
        the option to edit the preview typography.
      
      - Clarified descriptions of exporting versions.

      - Added the possibility of using silva lookup to filter on multiple 
        meta-types.
    
      - The import has an extra option: 'replace content' which, when
        enabled, replaces existing content objects with objects from the
        import when they have the same ids. It treats folderish strcutures in
        the same way a POSIX cp would: i.e. in the target folders are used 
        if they exist, and created if not.

      - Moved the set_content_type and set_cache_headers scripts into the 
        new view system, to the view 'headers'. 

      - Switched to Kupu 1.4 (the current 'trunk' (unreleased) version).

      - Moved the 'kupu/silva' directory to 'Silva/kupu' (so to the
        Silva core) to ease release management. If you develop Silva,
        see README.txt in Silva/kupu for information on what to do
        when you change kupu templates, or when Silva needs to be
        ported to a newer version of kupu.

      - Renamed 'kupu' and 'kupu_silva' in the Silva root to 'service_kupu' and
        'service_kupu_silva', respectively.

    Bugs fixed:
